feat: 005 task 정리 및 코드 최적화
